syntax = "proto3";

package executor.v1;

service Executor {
  rpc StreamActions(ConnectRequest) returns (stream ActionEnvelope);
  rpc ReportResult(ActionResult) returns (ReportAck);
  rpc PublishMetrics(MetricsUpdate) returns (ReportAck);
  rpc SubscribeMetrics(MetricsWatchRequest) returns (stream MetricsUpdate);
  rpc SubmitAction(ActionEnvelope) returns (ReportAck);
}

message ConnectRequest {
  string validator_id = 1;
  string auth_token = 2;
}

message ActionEnvelope {
  string validator_id = 1;
  string action_json = 2;
}

message ActionResult {
  string validator_id = 1;
  string action_json = 2;
  bool success = 3;
  string message = 4;
}

message MetricsUpdate {
  string validator_id = 1;
  string auth_token = 2;
  string metrics_json = 3;
}

message MetricsWatchRequest {
  repeated string validator_ids = 1;
  bool include_snapshot = 2;
}

message ReportAck {}

